apps/web/chrisitian/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrisitian
  namespace: web
spec:
  replicas: 0
  selector:
    matchLabels:
      app: chrisitian
  template:
    metadata:
      labels:
        app: chrisitian

    spec:
      containers:
      - name: chrisitian
        image: ghcr.io/maxwlang/chrisitian:v1.2.0
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "4000m"
        ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-login-secret
