apps/web/chrisitian/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrisitian
spec:
  selector:
    app: chrisitian
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
